# Trace-Vector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: GIT_GUIDE.md
project/code/: camera.c  camera.h  track.c  track.h
project/code/vision/: camera.c  camera.h  track.c  track.h
project/doc/: camera.md
project/mdk/: TraceVector.uvproj
project/user/: main.c
